# teaching-for-impact-feme

./: .gitignore  404.html  CLAUDE.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: settings.json
.claude/commands/: build-slides.md  plan-workshop.md
.github/workflows/: ci.yml
activities/: index.html
activities/activity_10_assessment/: index.html
activities/activity_13_snapshot/: index.html
conclusion/: index.html
docs/: conclusion.md  full-text.md  index.md  introduction.md
download_sources/: template_1_system_map_download.md
downloads/: activity_10_assessment.docx  activity_11_facilitation_session_plan.docx  activity_12_evaluation_plan.docx  activity_13_snapshot.docx  activity_14_oer.docx  activity_1_system_map.docx  activity_2_theory_of_change.docx  activity_3_learner_reality.docx  activity_4_learner_exp_audit.docx  activity_5_learning_outcomes.docx  activity_6_alignment.docx  activity_7_co_design.docx  activity_8_activity_design.docx  activity_9_practice_feedback.docx
extra-topics/: index.html
includes/: activity_header.md  lesson_header.md
introduction/: index.html
part-1/: index.html
part-2/: index.html
presentations/: base.html  index.html  part-1-session-exercises.md  part-1.html  part-2-session-exercises.md  part-2.html  presentation.css
scripts/: build_downloads.py  build_full_book.py  build_presentations.py  hooks.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
specs/: integration-plan.md  visual-aids-style-guide.md  workbook-style-design-specs.md
stylesheets/: extra.css
(+165 files in other folders)
