[project]
name = "teaching-for-impact-feme"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-material>=9.7.6",
    "mkdocs-macros-plugin>=1.3.7",
    "python-md2docx>=1.0.5",
    "w3lib>=2.4.1",
    "beautifulsoup4>=4.14.3",
]
